sample/sample-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample
spec:
  hosts:
    - "*"
  gateways:
    - sample-gateway
  http:
    - match:
        - uri:
            prefix: /getCustomerOrder
        - uri:
            exact: /getAllCustomer
        - uri:
            exact: /account/create
        - uri:
            exact: /getRuntimeException
        - uri:
            exact: /getExternalCall
        - uri:
            exact: /getGoogle
      route:
        - destination:
            host: sample
            port:
              number: 8081
